Still a lot to do to make it fully workable!!!
Add setup and management scripts for Rust-Java Mods development environment

- Create `rebuild-bridge.sh` for rebuilding and deploying the Carbon bridge plugin.
- Implement `setup.bat` for Windows to set up the development environment, check prerequisites, and deploy the Carbon bridge.
- Add `setup.sh` for Linux/Mac to perform similar setup tasks.
- Introduce `start-dev.bat` for starting the Rust development server on Windows.
- Add `start-dev.sh` for starting the Rust development server on Linux/Mac.
- Implement `watch-java.sh` for hot module reloading of Java plugins during development.